[gd_scene load_steps=29 format=2]

[ext_resource path="res://Shader/Wobbly.tres" type="Material" id=1]
[ext_resource path="res://Sprites/TwitchBone.png" type="Texture" id=2]
[ext_resource path="res://Sprites/TwitchBone_ARM.png" type="Texture" id=3]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=5]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=6]
[ext_resource path="res://Sprites/TwitchBone_ATTACK.png" type="Texture" id=7]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=8]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=9]
[ext_resource path="res://Enemy_TwitchBone.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="Resource" id=4]
script = ExtResource( 9 )
__meta__ = {
"graph_offset": Vector2( 808, 200 )
}
name = "Attack"

[sub_resource type="Resource" id=5]
script = ExtResource( 9 )
__meta__ = {
"graph_offset": Vector2( 1068, 80 )
}
name = "Dead"

[sub_resource type="Resource" id=6]
script = ExtResource( 9 )
__meta__ = {
"graph_offset": Vector2( 448, 180 )
}
name = "Entry"

[sub_resource type="Resource" id=7]
script = ExtResource( 9 )
__meta__ = {
"graph_offset": Vector2( 808, -40 )
}
name = "Idle"

[sub_resource type="Resource" id=8]
script = ExtResource( 6 )
name = "death"

[sub_resource type="Resource" id=9]
script = ExtResource( 5 )
from = "Attack"
to = "Dead"
conditions = {
"death": SubResource( 8 )
}

[sub_resource type="Resource" id=10]
script = ExtResource( 6 )
name = "attack_finished"

[sub_resource type="Resource" id=11]
script = ExtResource( 5 )
from = "Attack"
to = "Idle"
conditions = {
"attack_finished": SubResource( 10 )
}

[sub_resource type="Resource" id=12]
script = ExtResource( 5 )
from = "Entry"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=13]
script = ExtResource( 6 )
name = "attack"

[sub_resource type="Resource" id=14]
script = ExtResource( 5 )
from = "Idle"
to = "Attack"
conditions = {
"attack": SubResource( 13 )
}

[sub_resource type="Resource" id=15]
script = ExtResource( 6 )
name = "death"

[sub_resource type="Resource" id=16]
script = ExtResource( 5 )
from = "Idle"
to = "Dead"
conditions = {
"death": SubResource( 15 )
}

[sub_resource type="Resource" id=17]
script = ExtResource( 4 )
name = ""
states = {
"Attack": SubResource( 4 ),
"Dead": SubResource( 5 ),
"Entry": SubResource( 6 ),
"Idle": SubResource( 7 )
}
transitions = {
"Attack": {
"Dead": SubResource( 9 ),
"Idle": SubResource( 11 )
},
"Entry": {
"Idle": SubResource( 12 )
},
"Idle": {
"Attack": SubResource( 14 ),
"Dead": SubResource( 16 )
}
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 106.591, 109.118 )

[node name="TwitchBone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 10 )
death_time = 1.4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 1 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "Idle"

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 8 )
state_machine = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.667419, 17.3529 )
shape = SubResource( 18 )

[node name="Arm" type="Node2D" parent="."]
position = Vector2( -3.93972, 40.3517 )

[node name="Sprite" type="Sprite" parent="Arm"]
material = ExtResource( 1 )
position = Vector2( 42.8446, -5.20687 )
rotation = -1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[connection signal="transited" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_transited"]
[connection signal="updated" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_updated"]
